Integrating two apps

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI= mongodb+srv://THORISO:THORISO2@cluster0.k3fe5gw.mongodb.net/MEDI_FILES?retryWrites=true&w=majority
-PORT=4000
+PORT=4001
+JWT_SECRET=yourSuperSecretKey123
