--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "dev": "npx nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "multer": "^2.0.2"
   },
